--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.0",
-        "spatie/laravel-package-tools": "^1.16.0"
+        "spatie/laravel-package-tools": "^1.16.0",
+        "illuminate/contracts": "^10.0"
     },
     "require-dev": {
         "laravel/pint": "^1.13",
@@ -31,7 +32,7 @@
         "orchestra/testbench": "^8.17",
         "pestphp/pest": "^2.28",
         "pestphp/pest-plugin-arch": "^2.5",
-        "pestphp/pest-plugin-laravel": "^2.2",
+        "pestphp/pest-plugin-laravel": "^2.0",
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan-deprecation-rules": "^1.1",
         "phpstan/phpstan-phpunit": "^1.3"
