--- a/composer.json
+++ b/composer.json
@@ -73,5 +73,8 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "audit": {
+        "block-insecure": false
+    }
 }
