--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     ],
     "require": {
         "php": "^8.2",
-        "filament/filament": "^4.0.1",
+        "filament/filament": "^4.0|^5.0",
         "laravel/scout": "^10.5",
         "spatie/laravel-package-tools": "^1.15.0"
     },
